# FindexAI

./: .gitignore  README.md
backend/: .env.example  config.py  main.py  pyproject.toml  requirements.txt
backend/config/: __init__.py
backend/doc_analyser/: __init__.py  upload_hander.py
backend/models/: __init__.py
backend/models/requests/: __init__.py  subs.py  video_info.py
backend/models/response/: __init__.py  subs.py
backend/routes/: __init__.py  ask.py  health.py  video_info.py  video_subs.py
backend/routes/youtube/: __init__.py
backend/webcrawler/: __init__.py  html_md.py  request_md.py  super_scraper.py
backend/youtube_agent/: get_subs.py
backend/youtube_agent/transcript_generator/: __init_.py
backend/youtube_utils/: __init__.py  extract_id.py  get_info.py
backend/youtube_utils/transcript_generator/: __init__.py  clean.py  srt.py  timestamp.py
extension/: content.js  index.html  package-lock.json  package.json  popup.html  tailwind.config.js  vite.config.js
extension/public/: background.js  content.js  manifest.json
extension/src/: App.jsx  index.css  main.jsx
extension/src/components/: ChatSidebar.jsx  FloatingChatButton.jsx  SearchOverlay.jsx  YouTubeQAApp.jsx
extension/src/hooks/: useSearch.js  useYouTubeData.js
extension/src/utils/: api.js
prototype/: manifest.json  popup.js
