[project]
name = "backend-ytqa-extension"
version = "0.1.0"
description = "YouTube QA Extension for Flask"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "fastapi>=0.115.12",
    "langchain>=0.3.25",
    "pydantic>=2.11.5",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "yt-dlp>=2025.5.22",
]

[dependency-groups]
dev = [
    "uvicorn>=0.34.3",
]
